--- a/demo-android/src/main/res/layout/activity_draw.xml
+++ b/demo-android/src/main/res/layout/activity_draw.xml
@@ -17,4 +17,14 @@
         android:text="Clear"
         android:id="@+id/btn_clear"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_margin="10dp"
+        android:text="0ms"
+        android:id="@+id/tv_latency"
+        />
 </RelativeLayout>
