--- a/android-demo/src/main/res/layout/activity_draw.xml
+++ b/android-demo/src/main/res/layout/activity_draw.xml
@@ -39,4 +39,14 @@
         android:id="@+id/tv_count"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/tv_count"
+        android:layout_margin="10dp"
+        android:text="0dots"
+        android:id="@+id/tv_connect"
+        />
+
 </RelativeLayout>
