--- a/android-demo/src/main/res/layout/activity_draw.xml
+++ b/android-demo/src/main/res/layout/activity_draw.xml
@@ -49,4 +49,13 @@
         android:id="@+id/tv_connect"
         />
 
+    <TextView
+        android:id="@+id/tv_msg"
+        android:textSize="15sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:text="Msg:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
